# option-operators

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  option-operators.kdev4
docs/report/: report.tex
include/oo/: dummy.hpp
scripts/: rebuild.sh
src/cli/: main.cpp
src/lib/: dummy.cpp
tests/: CMakeLists.txt  test_basic.cpp
